--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -115,6 +115,9 @@ files in clientconfdir on the server.
 \fBhardlinked_archive=[0|1]\fR
 On the server, defines whether to keep hardlinked files in the backups, or whether to generate reverse deltas and delete the original files. Can be set to either 0 (off) or 1 (on).  Disadvantage: More disk space will be used Advantage: Restores will be faster, and since no reverse deltas need to be generated, the time and effort the server needs at the end of a backup is reduced.
 .TP
+\fBlibrsync=[0|1]\fR
+When set to 0, delta differencing will not take place. That is, when a file changes, the server will request the whole new file. This can be overridden by the client configuration files in clientconfdif on the server.
+.TP
 \fBworking_dir_recovery_method=[merge|use|delete]\fR
 This option tells the server what to do when it finds the working directory of an interrupted backup (perhaps somebody pulled the plug on the server, or something). This can be overridden by the client configurations files in clientconfdir
 on the server. Options are...
@@ -246,6 +249,7 @@ For the server to know about clients that can contact it, you need to place a fi
 \fBdirectory\fR
 \fBkeep\fR
 \fBworking_dir_recovery_method\fR
+\fBlibrsync\fR
 \fBtimer_script\fR
 \fBtimer_arg\fR
 \fBnotify_success_script\fR
