--- a/TODO
+++ b/TODO
@@ -21,3 +21,8 @@
 * Add an ncurses wrapper to the monitor commands.
 
 * Add an option to turn of storage compression.
+
+* Do not compress manifests and logs when compression is turned off.
+
+* A restore warning when a file exists now seems to cause "ret OK, but zstream not finished: 0" on the server.
+
