Prepare for 1.1.50 release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,11 @@
-  * Added the ability to define the level of compression (including turning it off).
+2011-04-14 Changes in burp-1.1.50:
+  * Added a script for backing up zfs snapshots with 'zfs send'.
+  * Added the ability to set the level of compression.
+  * Added the ability to turn off compression.
   * Added an option to define the poll interval in the Windows installer.
-  * Added the ability to turn off delta differencing.
+  * Added the ability to turn off librsync delta differencing.
   * Added the ability to give arguments to backup/restore/pre/post scripts.
-  * Added a script for backing up zfs full and incremental snapshots with 'zfs send'.
+  * Make configure/make work better on Solaris.
 
 2011-04-02 Changes in burp-1.1.40:
   * Added the ability to run client pre/post backup/restore scripts.
