--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -24,7 +24,7 @@ No daemon mode. The program will accept a single query, deal with it, and then
 exit. This is useful for debugging.
 .TP
 \fB\-a s\fR \fB\fR
-Run this to connect to a running server and see a live snapshot of the status of all your backup clients. You can additionally specify '-s [client]' to get more verbose details of a particular client. If your server config file is not in the default location, you will also need to specify the path with the '-c' option. Use the external program 'watch' to have a continuous update. A future burp release will use ncurses for a smoother experience. A 'watch' example: "watch burp -a s -s testclient' 
+Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '-c' option. The live monitor requires ncurses support at compile time.
 .TP
 \fB\-l\fR \fBlogfile\fR
 Short for 'log file'. The argument is a path to the log file. The default
