--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -20,15 +20,17 @@ Short for 'config file'. The argument is a path to the config file. The default
 is /etc/burp/burp.conf.
 .TP
 \fB\-n\fR \fB\fR
-No daemon mode. The program will accept a single query, deal with it, and then
-exit. This is useful for debugging.
+No forking mode. The program will accept a single query, deal with it, and then
+exit. This is useful for debugging. Implies '-F'.
+.TP
+\fB\-F\fR \fB\fR
+Foreground mode. The server will fork into the background and run as a daemon if you do not give this option.
 .TP
 \fB\-a s\fR \fB\fR
 Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '-c' option. The live monitor requires ncurses support at compile time.
 .TP
-\fB\-l\fR \fBlogfile\fR
-Short for 'log file'. The argument is a path to the log file. The default
-is stdout. This option overrides the
+\fB\-l\fR \fB[path]\fR
+Path to log file. The default is stdout. This option overrides the
 .IR logfile
 option in the config file. Use 
 .I /dev/null
