Get the client restore to use the sbuf functions, remove related kludges.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+  * Add options to run as a different user and group.
+  * Add Patrick Koppen's burp_ca script.
+  * Get the client restore to use the sbuf functions, remove related kludges.
+
 2011-05-13 Changes in burp-1.1.55:
   * Make the status monitor use ncurses.
   * Fixed two bugs that could drastically slow down the server if a file
