--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
   * Add options to run as a different user and group.
   * Add Patrick Koppen's burp_ca script.
   * Get the client restore to use the sbuf functions, remove related kludges.
+  * Fix possible client segfault when refusing to restore over existing files.
 
 2011-05-13 Changes in burp-1.1.55:
   * Make the status monitor use ncurses.
