--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
   * Print byte count as well as human readable byte count in the status summary
     screen.
   * Include backup numbers with the backup list in the status summary.
+  * Don't close the server read fd when running in non-forking mode.
 
 2011-05-13 Changes in burp-1.1.55:
   * Make the status monitor use ncurses.
