--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -173,8 +173,14 @@ The path to the SSL CA certificate. This file will probably be the same on both 
 \fBssl_cert=[path]\fR
 The path to the server SSL certificate. It works for me when the file contains the concatenation of the certificate and private key in PEM format.
 .TP
+\fBssl_key=[path]\fR
+The path to the server SSL private key in PEM format.
+.TP
+\fBssl_key_password=[password]\fR
+The SSL key password.
+.TP
 \fBssl_cert_password=[password]\fR
-The SSL certificate password.
+Synonym for ssl_key_password.
 .TP
 \fBssl_dhfile=[path]\fR
 Path to Diffie-Hellman parameter file. To generate one with openssl, use a command like this: openssl dhparam -out dhfile.pem -5 1024
@@ -256,10 +262,16 @@ Open all fifos for reading and back up the contents as if they were regular file
 The path to the SSL CA certificate. This file will probably be the same on both the server and the client. The file should contain just the certificate in PEM format
 .TP
 \fBssl_cert=[path]\fR
-The path to the server SSL certificate. It works for me when the file contains the concatenation of the certificate and private key in PEM format.
+The path to the client SSL certificate. It works for me when the file contains the concatenation of the certificate and private key in PEM format.
+.TP
+\fBssl_key=[path]\fR
+The path to the client SSL private key in PEM format.
+.TP
+\fBssl_key_password=[password]\fR
+The SSL key password.
 .TP
 \fBssl_cert_password=[password]\fR
-The SSL certificate password.
+Synonym for ssl_key_password.
 .TP
 \fBencryption_password=[password]\fR
 Set this to enable client side file Blowfish encryption. If you do not want encypryption, leave this field out of your config file. \fBIMPORTANT:\fR Configuring this renders delta differencing pointless, since the smallest real change to a file will make the whole file look different. Therefore, activating this option turns off delta differencing so that whenever a client file changes, the whole new file will be uploaded on the next backup. \fBALSO IMPORTANT:\fR If you manage to lose your encryption password, you will not be able to unencrypt your files. You should therefore think about having a copy of the encryption password somewhere off-box, in case of your client hard disk failing. \fBFINALLY:\fR If you change your encryption password, you will end up with a mixture of files on the server with different encryption and it may become tricky to restore more than one file at a time. For this reason, if you change your encryption password, you may want to start a fresh chain of backups (by moving the original set aside, for example). Burp will cope fine with turning the same encryption password on and off between backups, and will restore a backup of mixed encrypted and unencrypted files without a problem.
