--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.1.57) unstable; urgency=low
+
+  * update to 1.1.57
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Tue, 06 June 2011 23:00:00 +0000
+
 burp (1.1.55) unstable; urgency=low
 
   * update to 1.1.55
