--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
+  * Sanitised magic characters by defining them in a new cmd.h file.
   * Remove link kludge in async_read_stat().
   * Add option to set the umask on the server.
   * Add Patrick's burp_ca patches and README.CA.
+  * Fixed 'ret OK, but zstream not finished: 0' when refusing to restore over
+    existing files.
+  * Fixed bug that made clients disappear from the status monitor.
 
 2011-06-14 Changes in burp-1.1.57:
   * Add options to run as a different user and group.
