Added option to specify the clientconfdir password in passwd format.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@
   * Fixed 'ret OK, but zstream not finished: 0' when refusing to restore over
     existing files.
   * Fixed bug that made clients disappear from the status monitor.
+  * Added option to specify the clientconfdir password in passwd format.
 
 2011-06-14 Changes in burp-1.1.57:
   * Add options to run as a different user and group.
