Added mechanism for backing up and restoring extra meta data. Added linux ACL support.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,8 @@
     so that different client backups can be owned by different users.
   * Bug fix the client_lockdir option.
   * On the server, be more cautious about creating directories that don't exist.
+  * Add mechanism for backing up and restoring extra meta data.
+  * Linux ACL support.
 
 2011-06-14 Changes in burp-1.1.57:
   * Add options to run as a different user and group.
