--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.1.65) unstable; urgency=low
+
+  * update to 1.1.65
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Mon, 27 June 2011 21:40:00 +0000
+
 burp (1.1.57) unstable; urgency=low
 
   * update to 1.1.57
