--- a/TODO
+++ b/TODO
@@ -36,3 +36,9 @@
 * Have an option to let the client give the server the encryption password
   and hence do server-side encryption. This would mean that network deltas
   with encryption can be done.
+
+* Try to make backup_phase4_server more efficient. For example, a storage
+  server using a CIFS mounted disk appears very slow when I have a backup
+  containing 1,500,000 small files with very few changes.
+
+* Investigate Windows 'bare metal restore'.
