--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Add 'nobackup = [file name]' option. If this file system entry exists, the
+    directory containing it will not be backed up.
+
 2011-06-27 Changes in burp-1.1.65:
   * Add mechanism for backing up and restoring extra meta data.
   * Linux acl support.
