--- a/TODO
+++ b/TODO
@@ -63,3 +63,7 @@
   the server, so that clients are less likely to have to upgrade.
 
 * Break the stupidly long find_files() function down into smaller pieces.
+
+* When a client is waiting a very long time on working directory recovery, it
+  can get stuck in its select loop. Have some kind of a timeout. Or, go into
+  a different kind of loop where it keeps trying to make a fresh connection.
