More TODO items.

--- a/TODO
+++ b/TODO
@@ -67,3 +67,5 @@
 * When a client is waiting a very long time on working directory recovery, it
   can get stuck in its select loop. Have some kind of a timeout. Or, go into
   a different kind of loop where it keeps trying to make a fresh connection.
+
+* Need to set librsync block size based on the old file size.
