Handle Windows junction points.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@
   * FreeBSD ACL support.
   * FreeBSD xattr support.
   * Set librsync signature block size based on the old file size.
+  * Handle Windows junction points.
 
 2011-06-27 Changes in burp-1.1.65:
   * Add mechanism for backing up and restoring extra meta data.
