--- a/README
+++ b/README
@@ -39,9 +39,9 @@ WINDOWS CLIENT
 
 Pick the 32-bit or 64-bit Burp installer as appropriate - visit
 http://burp.grke.net/ to find one of them.
-Compilation instructions will be included in a separate guide.
+Compilation instructions can be found at src/win32/README in the source package.
 The Windows installer will ask you for the address of your server, the client
-name, and the client password. Burp will then installed its files to:
+name, and the client password. Burp will then install its files to:
 C:/Program Files/Burp
 If you need to change client configuration settings, the file can be found at:
 C:/Program Files/Burp/burp.conf
