--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -71,8 +71,11 @@ to deactivate or '' to reactivate output.
 
 .SH EXAMPLES
 .TP
+\fBburp -a b\fR
+Runs a backup.
+.TP
 \fBburp -a l\fR
-Lists the available backups and dates
+Lists the available backups and dates.
 .TP
 \fBburp -a l -b 1\fR
 Lists all the files in backup number 1.
