--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,7 +13,8 @@
   * Status monitor - fix a crash when a clientconfdir file can't be parsed.
   * Status monitor - don't show deleted clients.
   * Status monitor - make the file paths work again.
-
+  * Fixed working directory recovery bug where it couldn't find the manifest.gz
+    file due to it being called manifest.gz.tmp.
 
 2011-06-27 Changes in burp-1.1.65:
   * Add mechanism for backing up and restoring extra meta data.
