Tweaks for release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,20 +1,18 @@
+2011-07-26 Changes in burp-1.1.70:
+  * FreeBSD ACL support.
+  * FreeBSD xattr support.
+  * Handle Windows junction points.
+  * Add 'nobackup = [file name]' option. If this file system entry exists, the
+    directory containing it will not be backed up.
+  * Set librsync signature block size based on the old file size.
+  * Small bug fixes to the status monitor.
+  * Fixed working directory recovery bug where it couldn't find the manifest.gz
+    file due to it being called manifest.gz.tmp.
   * Get rid of the stupidly complicated 'find_files' callback mechanism
     inherited from bacula. Just call all the functions directly.
   * Fix compiler warnings and '-ldl' linker error on FreeBSD 8.2.
-  * Add 'nobackup = [file name]' option. If this file system entry exists, the
-    directory containing it will not be backed up.
   * When down to 'C:' in mkpath() on Windows restore, strip the ':'.
   * Run ERR_clear_error() before SSL_read/write.
-  * FreeBSD ACL support.
-  * FreeBSD xattr support.
-  * Set librsync signature block size based on the old file size.
-  * Handle Windows junction points.
-  * Status monitor - ignore vim tmp files in clientconfdir.
-  * Status monitor - fix a crash when a clientconfdir file can't be parsed.
-  * Status monitor - don't show deleted clients.
-  * Status monitor - make the file paths work again.
-  * Fixed working directory recovery bug where it couldn't find the manifest.gz
-    file due to it being called manifest.gz.tmp.
 
 2011-06-27 Changes in burp-1.1.65:
   * Add mechanism for backing up and restoring extra meta data.
