--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.1.70) unstable; urgency=low
+
+  * update to 1.1.70
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Tue, 26 July 2011 22:00:00 +0000
+
 burp (1.1.65) unstable; urgency=low
 
   * update to 1.1.65
