--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Add a useful message about options when run with '-h' or '-?'.
+
 2011-07-26 Changes in burp-1.1.70:
   * FreeBSD ACL support.
   * FreeBSD xattr support.
